<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_huge"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_120">

        <!--        <ImageView-->
        <!--            android:id="@+id/img_account"-->
        <!--            android:layout_width="@dimen/dp_19"-->
        <!--            android:layout_height="@dimen/dp_20"-->
        <!--            android:layout_alignParentBottom="true"-->
        <!--            android:layout_marginBottom="@dimen/margin_tiny"-->
        <!--            android:layout_marginLeft="@dimen/margin_tiny"-->
        <!--            android:scaleType="fitXY"-->
        <!--            android:src="@mipmap/icon_login_account" />-->


        <!--        android:layout_toRightOf="@+id/img_account"-->
<!--        android:layout_marginLeft="@dimen/margin_normal"-->
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:hint="@string/account"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal" />


<!--        android:layout_toRightOf="@+id/img_account"-->
<!--        android:layout_marginLeft="@dimen/margin_normal"-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:background="@color/bottom_gray" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_huge"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <!--        <ImageView-->
        <!--            android:id="@+id/img_pw"-->
        <!--            android:layout_width="@dimen/dp_18"-->
        <!--            android:layout_height="@dimen/dp_20"-->
        <!--            android:layout_alignParentBottom="true"-->
        <!--            android:layout_marginBottom="@dimen/margin_tiny"-->
        <!--            android:layout_marginLeft="@dimen/margin_tiny"-->
        <!--            android:scaleType="fitXY"-->
        <!--            android:src="@mipmap/icon_login_pw" />-->


        <!--        android:layout_toRightOf="@+id/img_pw"-->
<!--        android:layout_marginLeft="@dimen/margin_normal"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9.2"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/tv_gray_deep"
                android:textSize="@dimen/text_size_normal" />

            <ImageView
                android:id="@+id/iv_see_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_height_litter"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/img_pw"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/et_password"
                android:layout_weight="0.8"
                android:scaleType="fitXY"
                android:src="@mipmap/noout" />
        </LinearLayout>

<!--        android:layout_toRightOf="@+id/img_pw"-->
<!--        android:layout_marginLeft="@dimen/margin_normal"-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:background="@color/bottom_gray" />

    </RelativeLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginLeft="@dimen/margin_large"-->
    <!--        android:layout_marginRight="@dimen/margin_large"-->
    <!--        android:layout_marginTop="@dimen/margin_small"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:paddingBottom="@dimen/margin_small"-->
    <!--        android:paddingTop="@dimen/margin_small">-->

    <!--        <CheckBox-->
    <!--            android:id="@+id/checkBox_password"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:layout_weight="1"-->
    <!--            android:checked="false"-->
    <!--            android:padding="@dimen/dp_10"-->
    <!--            android:text="@string/check_password"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textSize="@dimen/text_size_normal"-->
    <!--            android:theme="@style/MyCheckBox" />-->

    <!--        <CheckBox-->
    <!--            android:id="@+id/checkBox_login"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:layout_weight="1"-->
    <!--            android:checked="false"-->
    <!--            android:padding="@dimen/dp_10"-->
    <!--            android:text="@string/check_login"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textSize="@dimen/text_size_normal"-->
    <!--            android:theme="@style/MyCheckBox" />-->

    <!--    </LinearLayout>-->

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tex_no_password"
            android:textColor="@color/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password" />

        <TextView
            android:id="@+id/tex_register"
            android:textColor="@color/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/immediately_register" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_huge"
        android:background="@drawable/btn_orange_selector"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="版本号：v1.0.0"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </RelativeLayout>

</LinearLayout>
